Migrated from log4j to log4j2